# StudyPack

./: CMakeLists.txt  License.txt  README.md
Source/: CMakeLists.txt  StudyPack.cc  StudyPackLib.cc  StudyPackLib.h
cmake/: CPack.STGZ_Header.sh.in
